force-app/main/default/objects/Individual_Enrollment_Grade__c/Individual_Enrollment_Grade__c.object-meta.xml
<CustomObject>
    <description>The grading for individual enrollment, it could be a grading for a grading period too.</description>
    <label>Individual Enrollment Grade</label>
    <nameField>
        <displayFormat>IGD-{00000}</displayFormat>
        <label>Individual Enrollment Grade #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Enrollment Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>