force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Term</label>
    <referenceTo>Study_Term__c</referenceTo>
    <relationshipLabel>Individual Enrollment Grades</relationshipLabel>
    <relationshipName>Individual_Enrollment_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>