force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Grading_Date__c.field-meta.xml
<CustomField>
    <fullName>Grading_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date of when the grading is registered.</description>
    <inlineHelpText>The date of when the grading is registered.</inlineHelpText>
    <label>Grading Date</label>
    <type>Date</type>
</CustomField>