force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Individual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Enrollment</label>
    <referenceTo>Individual_Enrollment__c</referenceTo>
    <relationshipLabel>Individual Enrollment Grades</relationshipLabel>
    <relationshipName>Individual_Enrollment_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>