force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <label>Letter Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Letter_Grade</valueSetName>
    </valueSet>
</CustomField>