force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Study_Grade_Period_Setting__c.field-meta.xml
<CustomField>
    <fullName>Study_Grade_Period_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Grade Period Setting</label>
    <referenceTo>Study_Grade_Period_Setting__c</referenceTo>
    <relationshipLabel>Individual Enrollment Grades</relationshipLabel>
    <relationshipName>Individual_Enrollment_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>