force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Study_Offering__c.field-meta.xml
<CustomField>
    <fullName>Study_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Offering</label>
    <referenceTo>Study_Offering__c</referenceTo>
    <relationshipLabel>Individual Enrollment Grades</relationshipLabel>
    <relationshipName>Individual_Enrollment_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>