force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>The date of when the grading is submitted.</description>
    <inlineHelpText>The date of when the grading is submitted.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>