force-app/main/default/objects/Individual_Enrollment_Grade__c/fields/Weighted_Grade__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Grade__c</fullName>
    <formula>IF( ISBLANK( Study_Grade_Period_Setting__c ),  Final_Numerical_Grade__c, Final_Numerical_Grade__c *  Study_Grade_Period_Setting__r.Weight__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Grade</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>